# colabsync

./: README.md  pyproject.toml
colabsync/: __init__.py  cli.py  client.py  filter.py  link.py  protocol.py  server.py  server_cli.py
docs/: SPEC.md  TODO.md
scratch/: check_link.py  pack_5bit.py
scripts/: colab-hook.sh
tests/: test_cli.py  test_link.py  test_protocol.py
