[project]
name = "colabsync"
version = "0.1.0"
description = "Live-sync a local repository into a Google Colab session"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["colab", "sync", "google-colab", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "websockets>=14.0",
    "watchfiles>=1.0",
    "gitignore-parser>=0.1.11",
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
colabsync = "colabsync.cli:main"
colabsync-server = "colabsync.server_cli:server_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
